--- a/solutions/day-8/level-3/public/index.html
+++ b/solutions/day-8/level-3/public/index.html
@@ -10,15 +10,58 @@
       content="Web site created using create-react-app"
     />
     <style>
-      .even {
-        background-color:#21BF73;
-      }
-      .odd {
-        background-color:#FDDB3A;
-      }
-      .prime {
-        background-color:#FD5E53;
-      }
+     .card{
+       max-width: 460px;
+       width: 100%;
+       box-shadow: 1px 1px 10px #d8d8d8;
+       margin: 0 auto;
+       padding: 15px;
+     }
+
+     .card-flag{
+       max-width: 200px;
+       width: 100%;
+       margin:0 auto;
+       text-align: center;
+       margin-bottom: 15px;
+     }
+
+     .flag{
+      max-width: 200px;
+      width: 100%;
+      height: 113px;
+      box-shadow: 1px 1px 10px #d8d8d8;;
+      margin: 0 auto;
+      margin-bottom: 10px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+     }
+
+     .card-title {
+       text-transform: uppercase;
+       color:rgb(129, 129, 129)
+     }
+
+     .card-text p {
+        color:rgb(129, 129, 129)
+     }
+
+     .card-button {
+       text-align: center;
+       margin-top: 20px;
+     }
+
+     .card-button button{
+      width: 152px;
+      height: 36px;
+      border-radius: 7px;
+      border: 0;
+      background-color: rgb(103, 247, 247);
+      color: white;
+      font-weight: bold;
+     }
+
     </style>
     <title>Level 2 - Day 6</title>
   </head>
