fix: change the title name

--- a/solutions/day-19/level-1/public/index.html
+++ b/solutions/day-19/level-1/public/index.html
@@ -11,26 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <style>
-      .container {
-        height:200px;
-        width:100%;
-      }
-      .morning {
-        background-color:#ffff6d;
-      }
-      .noon {
-        background-color:#ffd53f;
-      }
-      .evening {
-        background-color:#c076f2;
-      }
-      .night {
-        background-color: #00165b;
-      }
-
-    </style>
-    <title>Level 2 - Day 6</title>
+    <title>Cat Paradise - 30 days of React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
